--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/fonts.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="header__nav">
+            <div class="container">
+                <div class="header__nav-container">
+                    <a href="#" class="logo">
+                    Git
+                    </a>
+                    <ul class="header__nav-list">
+                      <li><a href="#" class="header__nav-link">Home</a></li>
+                      <li><a href="#" class="header__nav-link">Home</a></li>
+                      <li><a href="#" class="header__nav-link">Home</a></li>
+                      <li><a href="#" class="header__nav-link">Home</a></li>
+                      <li><a href="#" class="header__nav-link">Home</a></li> 
+            
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
