stajer first save

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 </div>
             </div>
         </nav>
+        <div class="header__content">
+            <h1>FrontEnd</h1>
+            <div class="start"></div>
+        </div>
     </header>
 </body>
 </html>
