--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <div class="container">
                 <div class="header__nav-container">
                     <a href="#" class="logo">
-                    Git
+                    Github
                     </a>
                     <ul class="header__nav-list">
-                      <li><a href="#" class="header__nav-link">Home</a></li>
-                      <li><a href="#" class="header__nav-link">Home</a></li>
-                      <li><a href="#" class="header__nav-link">Home</a></li>
-                      <li><a href="#" class="header__nav-link">Home</a></li>
-                      <li><a href="#" class="header__nav-link">Home</a></li> 
+                      <li><a href="#" class="header__nav-link">ome</a></li>
+                      <li><a href="#" class="header__nav-link">ome</a></li>
+                      <li><a href="#" class="header__nav-link">ome</a></li>
+                      <li><a href="#" class="header__nav-link">ome</a></li>
+                      <li><a href="#" class="header__nav-link">ome</a></li> 
             
                     </ul>
                 </div>
